kubernetes/iperf-srvice.yaml
apiVersion: v1
kind: Service
metadata:
  name: iperf-server
spec:
  type: NodePort
  selector:
    app: iperf-server
  ports:
  - protocol: TCP
    port: 5201
